--- a/ml/1. 머신러닝을 이용한 언어감지 서비스 구축(머신러닝 전과정수행).ipynb
+++ b/ml/1. 머신러닝을 이용한 언어감지 서비스 구축(머신러닝 전과정수행).ipynb
@@ -522,10 +522,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'./data/test\\\\en-1.txt'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mName = file_list1[0]\n",
+    "mName"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'en-1.txt'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#2. 파일명 획득\n",
+    "name1 = os.path.basename( mName )\n",
+    "name1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'en'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#3. 파일명에는 정답(레이블)이 들어 있다. 이것을 추출\n",
+    "# 확장성을 고려하여 정규식으로 처리\n",
+    "\n",
+    "p = re.compile('^[a-z]{2,}')\n",
+    "if p.match( name1 ):\n",
+    "    lang = p.match( name1 ).group()\n",
+    "    p.match( name1 ).group()\n",
+    "else:\n",
+    "    print('일치하지 않음')\n",
+    "lang"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'count' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-25-daca97e41c84>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mcount\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlang\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'count' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "count(lang)"
+   ]
   },
   {
    "cell_type": "code",
